Added UserController, UserRoutes, User Validators, and modified Swagger
