# src/api/swagger/swagger.yaml
@@ -1,16 +1,16 @@
 openapi: 3.0.0
 info:
-  version: 1.0.0
+  version: 1.1.0
   title: Whisper
   description: WHISPER OPENAPI DOCS
 servers:
-  - url: "http://{host}:{port}/{basePath}"
+  - url: 'http://{host}:{port}/api/{basePath}'
     description: API SERVER
     variables:
       host:
         default: localhost
       port:
-        default: "3000"
+        default: '3000'
       basePath:
         default: v1
 tags:
@@ -24,7 +24,7 @@ paths:
       description: Get all Users
       operationId: getUsers
       responses:
-        "200":
+        '200':
           content:
             application/json:
               schema:
@@ -39,8 +39,14 @@ paths:
                       type: string
                     password:
                       type: string
+                    flags:
+                      type: integer
+                      enum:
+                        - 0
+                        - 1 << 0
+                        - 1 << 1
           description: OK
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -61,16 +67,20 @@ paths:
           application/json:
             schema:
               properties:
-                id:
-                  type: string
                 email:
                   type: string
                 username:
                   type: string
                 password:
                   type: string
+                flags:
+                  type: integer
+                  enum:
+                    - 0
+                    - 1 << 0
+                    - 1 << 1
       responses:
-        "201":
+        '201':
           content:
             application/json:
               schema:
@@ -83,8 +93,23 @@ paths:
                     type: string
                   password:
                     type: string
+                  flags:
+                    type: integer
+                    enum:
+                      - 0
+                      - 1 << 0
+                      - 1 << 1
           description: Created
-        "500":
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -93,12 +118,12 @@ paths:
                 properties:
                   message:
                     type: string
-  "/users/{id}":
+  '/users/{userId}':
     x-swagger-router-controller: user
     parameters:
-      - description: ID of User
-        in: path
+      - in: path
         name: userId
+        description: The ID of User to retrieve
         required: true
         schema:
           type: string
@@ -108,7 +133,7 @@ paths:
       description: Get User by ID
       operationId: getUser
       responses:
-        "200":
+        '200':
           content:
             application/json:
               schema:
@@ -121,10 +146,16 @@ paths:
                     type: string
                   password:
                     type: string
+                  flags:
+                    type: integer
+                    enum:
+                      - 0
+                      - 1 << 0
+                      - 1 << 1
           description: OK
-        "404":
+        '404':
           description: Not Found
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -145,16 +176,20 @@ paths:
           application/json:
             schema:
               properties:
-                id:
-                  type: string
                 email:
                   type: string
                 username:
                   type: string
                 password:
                   type: string
+                flags:
+                  type: integer
+                  enum:
+                    - 0
+                    - 1 << 0
+                    - 1 << 1
       responses:
-        "200":
+        '200':
           content:
             application/json:
               schema:
@@ -167,10 +202,16 @@ paths:
                     type: string
                   password:
                     type: string
+                  flags:
+                    type: integer
+                    enum:
+                      - 0
+                      - 1 << 0
+                      - 1 << 1
           description: OK
-        "404":
+        '404':
           description: Not Found
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -185,11 +226,11 @@ paths:
       description: Remove User by ID
       operationId: deleteUser
       responses:
-        "204":
+        '204':
           description: No Content
-        "404":
+        '404':
           description: Not Found
-        "500":
+        '500':
           description: Internal Server Error
           content:
             application/json:
@@ -212,14 +253,20 @@ components:
           type: string
         password:
           type: string
+        flags:
+          type: integer
+          enum:
+            - 0
+            - 1 << 0
+            - 1 << 1
   parameters:
     userId:
-      in: path
-      name: userId
-      description: The ID of User to retrieve
-      required: true
-      schema:
-        type: string
+      - in: path
+        name: userId
+        description: The ID of User to retrieve
+        required: true
+        schema:
+          type: string
   responses:
     404NotFound:
       description: Not Found
@@ -232,3 +279,18 @@ components:
             properties:
               message:
                 type: string
+    200OK:
+      description: OK
+    422UnprocessableEntity:
+      description: Unprocessable Entity
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+    201Created:
+      description: Created
+    204NoContent:
+      description: No Content
